--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "nodemailer": "^6.9.4"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
-  }
+  },
+  "proxy": "http://localhost:8000"
 }
