--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
+    "html-react-parser": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.14.2",
     "react-star-ratings": "^2.3.0"
   },
