--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.1",
     "html-react-parser": "^4.2.2",
+    "lottie-react": "^2.4.0",
     "react": "^18.2.0",
     "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-image-gallery": "^1.3.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-router-dom": "^6.14.2",
     "react-star-ratings": "^2.3.0"
   },
